--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,7 +78,8 @@ import com.android.build.OutputFile
  */
 
 project.ext.react = [
-    enableHermes: false,  // clean and rebuild if changing
+    // enableHermes: false,  // clean and rebuild if changin?g
+    enableHermes: true,  // clean and rebuild if changin?g
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
@@ -119,7 +120,8 @@ def jscFlavor = 'org.webkit:android-jsc:+'
  * on project.ext.react, JavaScript will not be compiled to Hermes Bytecode
  * and the benefits of using Hermes will therefore be sharply reduced.
  */
-def enableHermes = project.ext.react.get("enableHermes", false);
+// def enableHermes = project.ext.react.get("enableHermes", false);
+def enableHermes = project.ext.react.get("enableHermes", true);
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -134,7 +136,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
     }
     splits {
         abi {
@@ -151,6 +153,14 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        // release {
+        //     if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
+        //         storeFile file(MYAPP_RELEASE_STORE_FILE)
+        //         storePassword MYAPP_RELEASE_STORE_PASSWORD
+        //         keyAlias MYAPP_RELEASE_KEY_ALIAS
+        //         keyPassword MYAPP_RELEASE_KEY_PASSWORD
+        //     }
+        // }
     }
     buildTypes {
         debug {
