database download added

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -79,6 +79,8 @@ target 'MyVocab' do
 
   pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
 
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
+
   target 'MyVocabTests' do
     inherit! :complete
     # Pods for testing
