--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "react-native-vector-icons": "^6.6.0",
     "react-native-zip-archive": "^5.0.2",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
