--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "promise-memoize": "^1.2.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-bootsplash": "^2.2.4",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
