--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^2.0.0",
     "react-native-screens": "^2.8.0",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-svg": "^12.1.0",
     "react-native-zip-archive": "^5.0.2",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
