--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-svg": "^12.1.0",
     "react-native-zip-archive": "^5.0.2",
     "react-redux": "^7.2.0",
+    "recyclerlistview": "^3.0.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
