--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "format": "prettier \"src/**/*.{js,html}\" --write"
   },
   "dependencies": {
     "@react-native-community/art": "^1.2.0",
@@ -45,6 +46,7 @@
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
+    "prettier": "^2.0.5",
     "react-test-renderer": "16.11.0",
     "reactotron-react-native": "^5.0.0",
     "reactotron-redux": "^3.1.3",
