--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "@reduxjs/toolkit": "^1.4.0",
     "lodash": "^4.17.15",
     "promise-memoize": "^1.2.1",
     "react": "16.13.1",
@@ -30,11 +31,9 @@
     "react-native-screens": "^2.9.0",
     "react-native-svg": "^12.1.0",
     "react-native-zip-archive": "^5.0.2",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
+    "react-redux": "^7.2.1",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.3",
-    "reselect": "^4.0.0"
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
