--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -27,7 +27,7 @@ android.enableJetifier=true
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.33.1
 
-# MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
-# MYAPP_RELEASE_KEY_ALIAS=my-key-alias
-# MYAPP_RELEASE_STORE_PASSWORD=juggernaut
-# MYAPP_RELEASE_KEY_PASSWORD=juggernaut
+MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=
+MYAPP_RELEASE_KEY_PASSWORD=
