--- a/package.json
+++ b/package.json
@@ -44,10 +44,7 @@
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
-    "react-test-renderer": "16.11.0",
-    "reactotron-react-native": "^5.0.0",
-    "reactotron-redux": "^3.1.3",
-    "reactotron-redux-saga": "^4.2.3"
+    "react-test-renderer": "16.11.0"
   },
   "jest": {
     "preset": "react-native"
