--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^2.0.0",
     "react-native-screens": "^2.9.0",
+    "react-native-simple-toast": "^1.1.3",
     "react-native-svg": "^12.1.0",
     "react-native-zip-archive": "^5.0.2",
     "react-redux": "^7.2.1",
