--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "react-native-svg": "^12.1.0",
     "react-native-zip-archive": "^5.0.2",
     "react-redux": "^7.2.1",
+    "reactotron-react-native": "^5.0.0",
+    "reactotron-redux": "^3.1.3",
+    "reactotron-redux-saga": "^4.2.3",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3"
   },
